--- a/src/components/Faqs/FaqSection.css
+++ b/src/components/Faqs/FaqSection.css
@@ -6,18 +6,11 @@
 .faqheading {
   font-family: "Poppins";
   color: #333333;
-  /* text-align: center; */
   justify-content: center;
   font-weight: 600;
-  margin-bottom: 4rem;
   font-size: 20px;
-  @apply text-left pl-12 md:text-center text-3xl sm:text-5xl;
+  @apply text-left mb-6 sm:mb-12 p-5 sm:p-0 sm:text-center text-3xl sm:text-5xl;
 }
-
-/* p {
-  padding: 1em;
-  padding-top: 0px;
-} */
 
 .tab {
   padding: 1em;
